--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,200&display=swap');
-
+@import url(animations.css);
 
 body {
 
@@ -12,9 +12,17 @@ body {
 
 
 }
-
+button{
+    cursor: pointer;
+}
+p{
+    cursor: default;
+}
 #titulo {
+    cursor: default;
     text-align: center;
+    font-family: 'Kanit', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .login {
@@ -32,11 +40,11 @@ body {
     padding-left: 50px;
 
     padding-right: 50px;
-    box-shadow: 1px 1px 4px 1px #FF914D; ;
-    font-family: 'Kanit', sans-serif;
+    animation: border_Rgb1 5s  infinite;
+    animation-direction: normal;
     font-family: 'Poppins', sans-serif;
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
@@ -63,8 +71,8 @@ body {
     width: 190px;
     font-size: large;
 
-    background-color: #FFB06B;
-    border: 0.3px groove #FF914D;
+    background-color: #fd1d1d;
+    border: 0.3px groove #ff4d4d;
     color: white;
     margin-left: auto;
     margin-right: auto;
@@ -80,8 +88,9 @@ body {
     width: 190px;
     font-size: large;
 
-    background-color: #FFB06B;
-    border: 0.3px groove #FF914D;
+    background-color: rgb(0, 102, 255);
+    border: 0.3px groove rgb(45, 127, 250) ;
+    
     color: white;
     margin-left: auto;
     margin-right: auto;
@@ -90,18 +99,23 @@ body {
 .text-sec {
     text-align: center;
 }
-
+a{
+    cursor: pointer;
+}
 a:link {
+    cursor: pointer;
     color: white;
 }
 
 /* link que foi visitado */
 a:visited {
+    cursor: pointer;
     color: white;
 }
 
 /* mouse over */
 a:hover {
+    cursor: pointer;
     color: white;
 }
 
@@ -123,6 +137,7 @@ input {
 
 .calculadora{
     border-radius: 10px;
+    animation: border_Rgb3 5s  infinite;
 
     width: max-content;
     height: min-content;
@@ -233,13 +248,14 @@ input::placeholder {
     background-color: 0;
     padding-bottom: 50px;
     padding-left: 50px;
+    animation: border_Rgb2 5s  infinite;
 
     padding-right: 50px;
     box-shadow: 1px 1px 4px 1px rgb(0, 102, 255);
     font-family: 'Kanit', sans-serif;
     font-family: 'Poppins', sans-serif;
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
